<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Body"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aboutHeader"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#271F22"
                android:text="@string/about_us"
                android:textAlignment="center"
                android:textColor="#DDDDDD"
                android:textSize="34sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:background="@color/yellow" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="411dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            tools:ignore="ImageContrastCheck"
                            tools:srcCompat="@tools:sample/avatars"
                            android:contentDescription="@string/todo4" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/aronwins_manuel"
                            android:textAlignment="center"
                            android:textColor="#DACDCD"
                            android:textSize="24sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="18dp">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#553C3C"
                            android:text="@string/developer"
                            android:textAlignment="center"
                            android:textColor="#B1ACAC"
                            android:textSize="20sp" />

                    </TableRow>

                </TableLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:background="@color/black" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="207dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="20dp">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="413dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            tools:srcCompat="@tools:sample/avatars"
                            android:contentDescription="@string/todo5" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ezekiel_giron"
                            android:textAlignment="center"
                            android:textColor="#DACDCD"
                            android:textSize="24sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#634893"
                            android:text="@string/developer2"
                            android:textAlignment="center"
                            android:textColor="#B1ACAC"
                            android:textSize="20sp" />
                    </TableRow>

                </TableLayout>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:background="@color/black" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="20dp">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="411dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            tools:ignore="ImageContrastCheck"
                            tools:srcCompat="@tools:sample/avatars"
                            android:contentDescription="@string/todo6" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/andrei_kyle_hidalgo"
                            android:textAlignment="center"
                            android:textColor="#DACDCD"
                            android:textSize="24sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="#2E7B9E"
                            android:text="@string/developer3"
                            android:textAlignment="center"
                            android:textColor="#D7CCC8"
                            android:textSize="20sp" />
                    </TableRow>

                </TableLayout>

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:background="@color/black" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

