<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Body"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/aboutHeader"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/Header"
                android:text="@string/about_us"
                android:textAlignment="center"
                android:textColor="#DDDDDD"
                android:textSize="34sp" />

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo4"
                    android:src="@drawable/logo"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ourSite"
                    android:textColor="@color/Text"
                    android:padding="20dp"/>

                <View
                    android:id="@+id/divider6"
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:background="@color/blue" />

                <TextView

                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meet"
                    android:textColor="@color/Text"
                    android:textSize="40sp"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="199dp"
                    android:layout_height="128dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo4"
                    android:src="@drawable/aron"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="398dp"
                    android:layout_height="43dp"
                    android:text="@string/aronwins_manuel"
                    android:textAlignment="center"
                    android:textColor="#DACDCD"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:background="@color/yellow"
                    android:text="@string/developer"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:background="@color/black" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="395dp"
                    android:layout_height="107dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo5"
                    android:src="@drawable/eze" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ezekiel_giron"
                    android:textAlignment="center"
                    android:textColor="#DACDCD"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:background="@color/yellow"
                    android:text="@string/developer2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:background="@color/black" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="392dp"
                    android:layout_height="108dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo6"
                    android:src="@drawable/drei"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/andrei_kyle_hidalgo"
                    android:textAlignment="center"
                    android:textColor="#DACDCD"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:background="@color/yellow"
                    android:text="@string/developer3"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:background="@color/black" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="62dp" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="7dp"
                    android:background="@color/yellow" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView

                            android:layout_width="395dp"
                            android:layout_height="wrap_content"
                            android:text="@string/whatdoyouthink"
                            android:textColor="@color/black"
                            android:textSize="40sp"
                            tools:ignore="TextContrastCheck,TextContrastCheck" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/inputTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:hint="Do you like our site?"
                            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/sendBtn"
                            android:layout_width="183dp"
                            android:layout_height="wrap_content"
                            android:text="Send Feedback"
                            app:backgroundTint="@color/blue"
                            tools:ignore="TextContrastCheck" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/displayTxt"
                            android:layout_width="match_parent"
                            android:layout_height="175dp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/viewBtn"
                            android:layout_width="186dp"
                            android:layout_height="wrap_content"
                            android:text="View Sent Feedback" />

                    </TableRow>

                </TableLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="62dp" />

                <LinearLayout
                    android:id="@+id/Footer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Footer"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/seeAll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="Home"
                        app:backgroundTint="@color/Footer"
                        tools:ignore="TextContrastCheck" />

                    <Button
                        android:id="@+id/aboutPage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="About"
                        app:backgroundTint="@color/Footer" />

                    <Button
                        android:id="@+id/morePage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="10dp"
                        android:text="More"
                        app:backgroundTint="@color/Footer" />

                    <TextView
                        android:id="@+id/followUs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="FOLLOW US"
                        android:textAlignment="center"
                        android:textColor="@color/Text"
                        android:textSize="16sp" />

                    <!--Social Links-->
                    <LinearLayout
                        android:id="@+id/socialLinks"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:textAlignment="center">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <ImageView
                            android:id="@+id/imageFacebook"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/facebook" />

                        <ImageView
                            android:id="@+id/imageTwitter"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/twitter"
                            tools:ignore="ImageContrastCheck" />

                        <ImageView
                            android:id="@+id/imageInstagram"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/instagram" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
